# sport-monitor

./: README.md
backend/clients_management/: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  start.py
backend/clients_management/alembic/versions/: 43c885569885_sex_added.py  df0c7a898d3c_season_tickets_added.py  fea6f2d00985_инициализация_бд.py
backend/clients_management/api/: __init__.py
backend/clients_management/api/dependencies/: __init__.py  session.py  tokens.py  validate_tokens.py
backend/clients_management/api/dependencies/services/: __init__.py  auth.py  clients.py
backend/clients_management/api/routes/v1/: __init__.py  auth.py  clients.py  root.py
backend/clients_management/api/v1/: __init__.py  dependencies.py
backend/clients_management/app/: main.py
backend/clients_management/app/alembic/: env.py
backend/clients_management/app/core/: config.py  jwt.py
backend/clients_management/app/repositories/: __init__.py  client_repository.py  interface.py  seson_ticket_repository.py  user_repository.py
backend/clients_management/app/schemas/: client.py  group.py  season_ticket.py
backend/clients_management/app/services/: __init__.py  auth_service.py  clients_service.py  season_ticket_service.py
backend/clients_management/core/: __init__.py  config.py  jwt.py  security.py
backend/clients_management/database/: initialize.py
backend/clients_management/database/tables/: __init__.py
backend/clients_management/repositories/: __init__.py  client_repository.py  user_repository.py
backend/clients_management/schemas/: __init__.py  client.py
backend/clients_management/schemas/requests/: __init__.py  sign_up.py
backend/clients_management/schemas/responses/: __init__.py  app_info.py  jwt.py  standard.py
backend/clients_management/services/: __init__.py  auth_service.py  clients_service.py
backend/clients_management/tests/: conftest.py  test_auth.py
backend/clients_management/tests/override/: __init__.py  initialize.py  session.py
frontend/: .gitignore  .prettierrc  angular.json  (+2 more)
(+113 files in other folders)
