[tool.poetry]
name = "Clients Management"
version = "0.1.2"
description = "Сервис менеджмента клиентов."
authors = ["alex6712 <alexeivanyukov@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pydantic = "^2.11.1"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-extra-types = "^2.10.4"
phonenumbers = "^9.0.5"
alembic = "^1.15.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
